--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -25,7 +25,7 @@
     </body>
 </html>-->
 <div>
-    <h1><a href="/">My Blog/a></h1>
+    <h1><a href="/">My Blog</a></h1>
 </div>
 
 {% for post in posts %}
